# smlnj-llvm-21.1

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-llvm.sh
llvm/include/llvm/AsmParser/: LLToken.h
llvm/include/llvm/IR/: CallingConv.h
llvm/lib/AsmParser/: LLLexer.cpp  LLParser.cpp
llvm/lib/CodeGen/: PrologEpilogInserter.cpp
llvm/lib/IR/: AsmWriter.cpp
smlnj/: CMakeLists.txt  README.md  compile_flags.txt
smlnj/cfgc/: CMakeLists.txt  README.md  codegen.cpp  codegen.hpp  main.cpp
smlnj/config/: config.h.cmake
smlnj/heap2obj/: CMakeLists.txt  Makefile  main.cpp
smlnj/include/: CMakeLists.txt  cfg.hpp  cm-registers.hpp  context.hpp  heap2obj.hpp  lambda-var.hpp  object-file.hpp  objfile-stream.hpp  target-info.hpp
smlnj/include/asdl/: config.h
smlnj/lib-codegen/: CMakeLists.txt  cfg-codegen.cpp  cfg-init.cpp  cfg-prim-codegen.cpp  cfg.cpp  cm-registers.cpp  context.cpp  lambda-var.cpp  mc-gen.cpp  mc-gen.hpp  object-file.cpp  objfile-stream.cpp  overflow.cpp  target-info.cpp
smlnj/lib-heap2obj/: CMakeLists.txt  heap2obj.cpp  main.cpp
smlnj/tests/: README.md  tst-arr-len.pkl  tst-arr-sub.pkl  tst-arr-unbox-upd.pkl  tst-arr-upd.pkl  tst-ex01.pkl  tst-ex02.pkl  tst-ex03.pkl  tst-ex04.pkl  tst-ex05.pkl  tst-ex06.pkl  tst-ex06.sml  tst-ex07.pkl  tst-ex08.pkl  tst-ex09.pkl  tst-f64arr-len.pkl  tst-f64arr-sub.pkl  tst-f64arr-upd.pkl  tst-int-add.pkl  tst-int-div.pkl  tst-int-mod.pkl  tst-int-mul.pkl  tst-int-neg.pkl  tst-int-quot.pkl  tst-int-rem.pkl  tst-int-sub.pkl  tst-int64-add.pkl  tst-int64-div.pkl  tst-int64-mod.pkl  tst-int64-mul.pkl  tst-int64-neg.pkl  tst-int64-quot.pkl  tst-int64-rem.pkl  tst-int64-sub.pkl  tst-vec-len.pkl  tst-vec-sub.pkl  tst-w8arr-len.pkl  tst-w8arr-sub.pkl  tst-w8arr-upd.pkl  tst-w8vec-len.pkl  (+25 more)
smlnj/tests/Synthetic/: cfg.cm  dump.sml  ex00.sml  ex01.sml  ex02.pkl  ex02.sml  ex03.pkl  ex03.sml  ex04.pkl  ex04.sml  ex05.sml  ex06.pkl  ex06.sml  ex07.sml  ex08.sml  ex09.pkl  ex09.sml  ex10.pkl  ex10.sml  ex11.pkl  ex11.sml  sources.cm
